--- a/Resources/Prototypes/Entities/Objects/Fun/CardGames/Uno/uno_cards_green.yml
+++ b/Resources/Prototypes/Entities/Objects/Fun/CardGames/Uno/uno_cards_green.yml
@@ -1,193 +1,167 @@
+# GREEN CARDS
 
-# Green Cards
 - type: entity
-  parent: BaseUnoCard
+  parent: BaseUnoCardGreen
   id: UnoCardGreen0
-  name: Зелёная карта UNO 0
-  description: Игральная карта UNO
+  name: зелёная карта UNO 0
+  description: Игральная карта UNO.
   components:
   - type: Sprite
-    sprite: Objects/Fun/UnoCards/uno_green.rsi
     state: unogreen0
-    scale: 0.5, 0.5
   - type: SpawnItemsOnUse
     items:
     - id: UnoCardUnknownGreen0
 
 - type: entity
-  parent: BaseUnoCard
+  parent: BaseUnoCardGreen
   id: UnoCardGreen1
-  name: Зелёная карта UNO 1
-  description: Игральная карта UNO
+  name: зелёная карта UNO 1
+  description: Игральная карта UNO.
   components:
   - type: Sprite
-    sprite: Objects/Fun/UnoCards/uno_green.rsi
     state: unogreen1
-    scale: 0.5, 0.5
   - type: SpawnItemsOnUse
     items:
     - id: UnoCardUnknownGreen1
 
 - type: entity
-  parent: BaseUnoCard
+  parent: BaseUnoCardGreen
   id: UnoCardGreen2
-  name: Зелёная карта UNO 2
-  description: Игральная карта UNO
+  name: зелёная карта UNO 2
+  description: Игральная карта UNO.
   components:
   - type: Sprite
-    sprite: Objects/Fun/UnoCards/uno_green.rsi
     state: unogreen2
-    scale: 0.5, 0.5
   - type: SpawnItemsOnUse
     items:
     - id: UnoCardUnknownGreen2
 
 - type: entity
-  parent: BaseUnoCard
+  parent: BaseUnoCardGreen
   id: UnoCardGreen3
-  name: Зелёная карта UNO 3
-  description: Игральная карта UNO
+  name: зелёная карта UNO 3
+  description: Игральная карта UNO.
   components:
   - type: Sprite
-    sprite: Objects/Fun/UnoCards/uno_green.rsi
     state: unogreen3
-    scale: 0.5, 0.5
   - type: SpawnItemsOnUse
     items:
     - id: UnoCardUnknownGreen3
 
 - type: entity
-  parent: BaseUnoCard
+  parent: BaseUnoCardGreen
   id: UnoCardGreen4
-  name: Зелёная карта UNO 4
-  description: Игральная карта UNO
+  name: зелёная карта UNO 4
+  description: Игральная карта UNO.
   components:
   - type: Sprite
-    sprite: Objects/Fun/UnoCards/uno_green.rsi
     state: unogreen4
-    scale: 0.5, 0.5
   - type: SpawnItemsOnUse
     items:
     - id: UnoCardUnknownGreen4
 
 - type: entity
-  parent: BaseUnoCard
+  parent: BaseUnoCardGreen
   id: UnoCardGreen5
-  name: Зелёная карта UNO 5
-  description: Игральная карта UNO
+  name: зелёная карта UNO 5
+  description: Игральная карта UNO.
   components:
   - type: Sprite
-    sprite: Objects/Fun/UnoCards/uno_green.rsi
     state: unogreen5
-    scale: 0.5, 0.5
   - type: SpawnItemsOnUse
     items:
     - id: UnoCardUnknownGreen5
 
 - type: entity
-  parent: BaseUnoCard
+  parent: BaseUnoCardGreen
   id: UnoCardGreen6
-  name: Зелёная карта UNO 6
-  description: Игральная карта UNO
+  name: зелёная карта UNO 6
+  description: Игральная карта UNO.
   components:
   - type: Sprite
-    sprite: Objects/Fun/UnoCards/uno_green.rsi
     state: unogreen6
-    scale: 0.5, 0.5
   - type: SpawnItemsOnUse
     items:
     - id: UnoCardUnknownGreen6
 
 - type: entity
-  parent: BaseUnoCard
+  parent: BaseUnoCardGreen
   id: UnoCardGreen7
-  name: Зелёная карта UNO 7
-  description: Игральная карта UNO
+  name: зелёная карта UNO 7
+  description: Игральная карта UNO.
   components:
   - type: Sprite
-    sprite: Objects/Fun/UnoCards/uno_green.rsi
     state: unogreen7
-    scale: 0.5, 0.5
   - type: SpawnItemsOnUse
     items:
     - id: UnoCardUnknownGreen7
 
 - type: entity
-  parent: BaseUnoCard
+  parent: BaseUnoCardGreen
   id: UnoCardGreen8
-  name: Зелёная карта UNO 8
-  description: Игральная карта UNO
+  name: зелёная карта UNO 8
+  description: Игральная карта UNO.
   components:
   - type: Sprite
-    sprite: Objects/Fun/UnoCards/uno_green.rsi
     state: unogreen8
-    scale: 0.5, 0.5
   - type: SpawnItemsOnUse
     items:
     - id: UnoCardUnknownGreen8
 
 - type: entity
-  parent: BaseUnoCard
+  parent: BaseUnoCardGreen
   id: UnoCardGreen9
-  name: Зелёная карта UNO 9
-  description: Игральная карта UNO
+  name: зелёная карта UNO 9
+  description: Игральная карта UNO.
   components:
   - type: Sprite
-    sprite: Objects/Fun/UnoCards/uno_green.rsi
     state: unogreen9
-    scale: 0.5, 0.5
   - type: SpawnItemsOnUse
     items:
     - id: UnoCardUnknownGreen9
 
 - type: entity
-  parent: BaseUnoCard
+  parent: BaseUnoCardGreen
   id: UnoCardGreenPlus
-  name: Зелёная карта UNO плюс 2
-  description: Игральная карта UNO
+  name: зелёная карта UNO плюс 2
+  description: Игральная карта UNO.
   components:
   - type: Sprite
-    sprite: Objects/Fun/UnoCards/uno_green.rsi
     state: unogreenplus
-    scale: 0.5, 0.5
   - type: SpawnItemsOnUse
     items:
     - id: UnoCardUnknownGreenPlus
 
 - type: entity
-  parent: BaseUnoCard
+  parent: BaseUnoCardGreen
   id: UnoCardGreenReverse
-  name: Зелёная карта UNO реверс
-  description: Игральная карта UNO
+  name: зелёная карта UNO реверс
+  description: Игральная карта UNO.
   components:
   - type: Sprite
-    sprite: Objects/Fun/UnoCards/uno_green.rsi
     state: unogreenreverse
-    scale: 0.5, 0.5
   - type: SpawnItemsOnUse
     items:
     - id: UnoCardUnknownGreenReverse
 
 - type: entity
-  parent: BaseUnoCard
+  parent: BaseUnoCardGreen
   id: UnoCardGreenStop
-  name: Зелёная карта UNO стоп
-  description: Игральная карта UNO
+  name: зелёная карта UNO стоп
+  description: Игральная карта UNO.
   components:
   - type: Sprite
-    sprite: Objects/Fun/UnoCards/uno_green.rsi
     state: unogreenstop
-    scale: 0.5, 0.5
   - type: SpawnItemsOnUse
     items:
     - id: UnoCardUnknownGreenStop
 
-# Green Cards Unknown
+# UNKNOWN GREEN CARDS
+
 - type: entity
   parent: BaseUnoUnknownCard
   id: UnoCardUnknownGreen0
-  name: Неизвестная карта
-  description: Игральная карта UNO
+  noSpawn: true
   components:
   - type: SpawnItemsOnUse
     items:
@@ -196,8 +170,7 @@
 - type: entity
   parent: BaseUnoUnknownCard
   id: UnoCardUnknownGreen1
-  name: Неизвестная карта
-  description: Игральная карта UNO
+  noSpawn: true
   components:
   - type: SpawnItemsOnUse
     items:
@@ -206,8 +179,7 @@
 - type: entity
   parent: BaseUnoUnknownCard
   id: UnoCardUnknownGreen2
-  name: Неизвестная карта
-  description: Игральная карта UNO
+  noSpawn: true
   components:
   - type: SpawnItemsOnUse
     items:
@@ -216,8 +188,7 @@
 - type: entity
   parent: BaseUnoUnknownCard
   id: UnoCardUnknownGreen3
-  name: Неизвестная карта
-  description: Игральная карта UNO
+  noSpawn: true
   components:
   - type: SpawnItemsOnUse
     items:
@@ -226,8 +197,7 @@
 - type: entity
   parent: BaseUnoUnknownCard
   id: UnoCardUnknownGreen4
-  name: Неизвестная карта
-  description: Игральная карта UNO
+  noSpawn: true
   components:
   - type: SpawnItemsOnUse
     items:
@@ -236,8 +206,7 @@
 - type: entity
   parent: BaseUnoUnknownCard
   id: UnoCardUnknownGreen5
-  name: Неизвестная карта
-  description: Игральная карта UNO
+  noSpawn: true
   components:
   - type: SpawnItemsOnUse
     items:
@@ -246,8 +215,7 @@
 - type: entity
   parent: BaseUnoUnknownCard
   id: UnoCardUnknownGreen6
-  name: Неизвестная карта
-  description: Игральная карта UNO
+  noSpawn: true
   components:
   - type: SpawnItemsOnUse
     items:
@@ -256,8 +224,7 @@
 - type: entity
   parent: BaseUnoUnknownCard
   id: UnoCardUnknownGreen7
-  name: Неизвестная карта
-  description: Игральная карта UNO
+  noSpawn: true
   components:
   - type: SpawnItemsOnUse
     items:
@@ -266,8 +233,7 @@
 - type: entity
   parent: BaseUnoUnknownCard
   id: UnoCardUnknownGreen8
-  name: Неизвестная карта
-  description: Игральная карта UNO
+  noSpawn: true
   components:
   - type: SpawnItemsOnUse
     items:
@@ -276,8 +242,7 @@
 - type: entity
   parent: BaseUnoUnknownCard
   id: UnoCardUnknownGreen9
-  name: Неизвестная карта
-  description: Игральная карта UNO
+  noSpawn: true
   components:
   - type: SpawnItemsOnUse
     items:
@@ -286,8 +251,7 @@
 - type: entity
   parent: BaseUnoUnknownCard
   id: UnoCardUnknownGreenPlus
-  name: Неизвестная карта
-  description: Игральная карта UNO
+  noSpawn: true
   components:
   - type: SpawnItemsOnUse
     items:
@@ -296,8 +260,7 @@
 - type: entity
   parent: BaseUnoUnknownCard
   id: UnoCardUnknownGreenReverse
-  name: Неизвестная карта
-  description: Игральная карта UNO
+  noSpawn: true
   components:
   - type: SpawnItemsOnUse
     items:
@@ -306,8 +269,7 @@
 - type: entity
   parent: BaseUnoUnknownCard
   id: UnoCardUnknownGreenStop
-  name: Неизвестная карта
-  description: Игральная карта UNO
+  noSpawn: true
   components:
   - type: SpawnItemsOnUse
     items:
