--- a/Resources/Prototypes/Entities/Objects/Fun/CardGames/Uno/uno_cards_other.yml
+++ b/Resources/Prototypes/Entities/Objects/Fun/CardGames/Uno/uno_cards_other.yml
@@ -1,8 +1,8 @@
 - type: entity
   parent: BaseStorageItem
   id: UnoCardBag
-  name: Карты UNO
-  description: Игральные карты UNO
+  name: упаковка карт UNO
+  description: Упаковка с игральными картами UNO.
   components:
   - type: Sprite
     sprite: Objects/Fun/UnoCards/uno_special.rsi
@@ -138,7 +138,7 @@
 - type: entity
   parent: BaseStorageItem
   id: UnoPlayerCardBag
-  name: Карты игрока UNO
+  name: колода карт игрока UNO
   components:
   - type: Sprite
     sprite: Objects/Fun/UnoCards/uno_special.rsi
