--- a/Resources/Prototypes/Entities/Objects/Fun/CardGames/Uno/uno_cards_red.yml
+++ b/Resources/Prototypes/Entities/Objects/Fun/CardGames/Uno/uno_cards_red.yml
@@ -1,193 +1,167 @@
+# RED CARDS
 
-# Red Cards
 - type: entity
-  parent: BaseUnoCard
+  parent: BaseUnoCardRed
   id: UnoCardRed0
-  name: Красная карта UNO 0
-  description: Игральная карта UNO
+  name: красная карта UNO 0
+  description: Игральная карта UNO.
   components:
   - type: Sprite
-    sprite: Objects/Fun/UnoCards/uno_red.rsi
     state: unored0
-    scale: 0.5, 0.5
   - type: SpawnItemsOnUse
     items:
     - id: UnoCardUnknownRed0
 
 - type: entity
-  parent: BaseUnoCard
+  parent: BaseUnoCardRed
   id: UnoCardRed1
-  name: Красная карта UNO 1
-  description: Игральная карта UNO
+  name: красная карта UNO 1
+  description: Игральная карта UNO.
   components:
   - type: Sprite
-    sprite: Objects/Fun/UnoCards/uno_red.rsi
     state: unored1
-    scale: 0.5, 0.5
   - type: SpawnItemsOnUse
     items:
     - id: UnoCardUnknownRed1
 
 - type: entity
-  parent: BaseUnoCard
+  parent: BaseUnoCardRed
   id: UnoCardRed2
-  name: Красная карта UNO 2
-  description: Игральная карта UNO
+  name: красная карта UNO 2
+  description: Игральная карта UNO.
   components:
   - type: Sprite
-    sprite: Objects/Fun/UnoCards/uno_red.rsi
     state: unored2
-    scale: 0.5, 0.5
   - type: SpawnItemsOnUse
     items:
     - id: UnoCardUnknownRed2
 
 - type: entity
-  parent: BaseUnoCard
+  parent: BaseUnoCardRed
   id: UnoCardRed3
-  name: Красная карта UNO 3
-  description: Игральная карта UNO
+  name: красная карта UNO 3
+  description: Игральная карта UNO.
   components:
   - type: Sprite
-    sprite: Objects/Fun/UnoCards/uno_red.rsi
     state: unored3
-    scale: 0.5, 0.5
   - type: SpawnItemsOnUse
     items:
     - id: UnoCardUnknownRed3
 
 - type: entity
-  parent: BaseUnoCard
+  parent: BaseUnoCardRed
   id: UnoCardRed4
-  name: Красная карта UNO 4
-  description: Игральная карта UNO
+  name: красная карта UNO 4
+  description: Игральная карта UNO.
   components:
   - type: Sprite
-    sprite: Objects/Fun/UnoCards/uno_red.rsi
     state: unored4
-    scale: 0.5, 0.5
   - type: SpawnItemsOnUse
     items:
     - id: UnoCardUnknownRed4
 
 - type: entity
-  parent: BaseUnoCard
+  parent: BaseUnoCardRed
   id: UnoCardRed5
-  name: Красная карта UNO 5
-  description: Игральная карта UNO
+  name: красная карта UNO 5
+  description: Игральная карта UNO.
   components:
   - type: Sprite
-    sprite: Objects/Fun/UnoCards/uno_red.rsi
     state: unored5
-    scale: 0.5, 0.5
   - type: SpawnItemsOnUse
     items:
     - id: UnoCardUnknownRed5
 
 - type: entity
-  parent: BaseUnoCard
+  parent: BaseUnoCardRed
   id: UnoCardRed6
-  name: Красная карта UNO 6
-  description: Игральная карта UNO
+  name: красная карта UNO 6
+  description: Игральная карта UNO.
   components:
   - type: Sprite
-    sprite: Objects/Fun/UnoCards/uno_red.rsi
     state: unored6
-    scale: 0.5, 0.5
   - type: SpawnItemsOnUse
     items:
     - id: UnoCardUnknownRed6
 
 - type: entity
-  parent: BaseUnoCard
+  parent: BaseUnoCardRed
   id: UnoCardRed7
-  name: Красная карта UNO 7
-  description: Игральная карта UNO
+  name: красная карта UNO 7
+  description: Игральная карта UNO.
   components:
   - type: Sprite
-    sprite: Objects/Fun/UnoCards/uno_red.rsi
     state: unored7
-    scale: 0.5, 0.5
   - type: SpawnItemsOnUse
     items:
     - id: UnoCardUnknownRed7
 
 - type: entity
-  parent: BaseUnoCard
+  parent: BaseUnoCardRed
   id: UnoCardRed8
-  name: Красная карта UNO 8
-  description: Игральная карта UNO
+  name: красная карта UNO 8
+  description: Игральная карта UNO.
   components:
   - type: Sprite
-    sprite: Objects/Fun/UnoCards/uno_red.rsi
     state: unored8
-    scale: 0.5, 0.5
   - type: SpawnItemsOnUse
     items:
     - id: UnoCardUnknownRed8
 
 - type: entity
-  parent: BaseUnoCard
+  parent: BaseUnoCardRed
   id: UnoCardRed9
-  name: Красная карта UNO 9
-  description: Игральная карта UNO
+  name: красная карта UNO 9
+  description: Игральная карта UNO.
   components:
   - type: Sprite
-    sprite: Objects/Fun/UnoCards/uno_red.rsi
     state: unored9
-    scale: 0.5, 0.5
   - type: SpawnItemsOnUse
     items:
     - id: UnoCardUnknownRed9
 
 - type: entity
-  parent: BaseUnoCard
+  parent: BaseUnoCardRed
   id: UnoCardRedPlus
-  name: Красная карта UNO плюс 2
-  description: Игральная карта UNO
+  name: красная карта UNO плюс 2
+  description: Игральная карта UNO.
   components:
   - type: Sprite
-    sprite: Objects/Fun/UnoCards/uno_red.rsi
     state: unoredplus
-    scale: 0.5, 0.5
   - type: SpawnItemsOnUse
     items:
     - id: UnoCardUnknownRedPlus
 
 - type: entity
-  parent: BaseUnoCard
+  parent: BaseUnoCardRed
   id: UnoCardRedReverse
-  name: Красная карта UNO реверс
-  description: Игральная карта UNO
+  name: красная карта UNO реверс
+  description: Игральная карта UNO.
   components:
   - type: Sprite
-    sprite: Objects/Fun/UnoCards/uno_red.rsi
     state: unoredreverse
-    scale: 0.5, 0.5
   - type: SpawnItemsOnUse
     items:
     - id: UnoCardUnknownRedReverse
 
 - type: entity
-  parent: BaseUnoCard
+  parent: BaseUnoCardRed
   id: UnoCardRedStop
-  name: Красная карта UNO стоп
-  description: Игральная карта UNO
+  name: красная карта UNO стоп
+  description: Игральная карта UNO.
   components:
   - type: Sprite
-    sprite: Objects/Fun/UnoCards/uno_red.rsi
     state: unoredstop
-    scale: 0.5, 0.5
   - type: SpawnItemsOnUse
     items:
     - id: UnoCardUnknownRedStop
 
-# Red Cards Unknown
+# UNKNOWN RED CARDS
+
 - type: entity
   parent: BaseUnoUnknownCard
   id: UnoCardUnknownRed0
-  name: Неизвестная карта
-  description: Игральная карта UNO
+  noSpawn: true
   components:
   - type: SpawnItemsOnUse
     items:
@@ -196,8 +170,7 @@
 - type: entity
   parent: BaseUnoUnknownCard
   id: UnoCardUnknownRed1
-  name: Неизвестная карта
-  description: Игральная карта UNO
+  noSpawn: true
   components:
   - type: SpawnItemsOnUse
     items:
@@ -206,8 +179,7 @@
 - type: entity
   parent: BaseUnoUnknownCard
   id: UnoCardUnknownRed2
-  name: Неизвестная карта
-  description: Игральная карта UNO
+  noSpawn: true
   components:
   - type: SpawnItemsOnUse
     items:
@@ -216,8 +188,7 @@
 - type: entity
   parent: BaseUnoUnknownCard
   id: UnoCardUnknownRed3
-  name: Неизвестная карта
-  description: Игральная карта UNO
+  noSpawn: true
   components:
   - type: SpawnItemsOnUse
     items:
@@ -226,8 +197,7 @@
 - type: entity
   parent: BaseUnoUnknownCard
   id: UnoCardUnknownRed4
-  name: Неизвестная карта
-  description: Игральная карта UNO
+  noSpawn: true
   components:
   - type: SpawnItemsOnUse
     items:
@@ -236,8 +206,7 @@
 - type: entity
   parent: BaseUnoUnknownCard
   id: UnoCardUnknownRed5
-  name: Неизвестная карта
-  description: Игральная карта UNO
+  noSpawn: true
   components:
   - type: SpawnItemsOnUse
     items:
@@ -246,8 +215,7 @@
 - type: entity
   parent: BaseUnoUnknownCard
   id: UnoCardUnknownRed6
-  name: Неизвестная карта
-  description: Игральная карта UNO
+  noSpawn: true
   components:
   - type: SpawnItemsOnUse
     items:
@@ -256,8 +224,7 @@
 - type: entity
   parent: BaseUnoUnknownCard
   id: UnoCardUnknownRed7
-  name: Неизвестная карта
-  description: Игральная карта UNO
+  noSpawn: true
   components:
   - type: SpawnItemsOnUse
     items:
@@ -266,8 +233,7 @@
 - type: entity
   parent: BaseUnoUnknownCard
   id: UnoCardUnknownRed8
-  name: Неизвестная карта
-  description: Игральная карта UNO
+  noSpawn: true
   components:
   - type: SpawnItemsOnUse
     items:
@@ -276,8 +242,7 @@
 - type: entity
   parent: BaseUnoUnknownCard
   id: UnoCardUnknownRed9
-  name: Неизвестная карта
-  description: Игральная карта UNO
+  noSpawn: true
   components:
   - type: SpawnItemsOnUse
     items:
@@ -286,8 +251,7 @@
 - type: entity
   parent: BaseUnoUnknownCard
   id: UnoCardUnknownRedPlus
-  name: Неизвестная карта
-  description: Игральная карта UNO
+  noSpawn: true
   components:
   - type: SpawnItemsOnUse
     items:
@@ -296,8 +260,7 @@
 - type: entity
   parent: BaseUnoUnknownCard
   id: UnoCardUnknownRedReverse
-  name: Неизвестная карта
-  description: Игральная карта UNO
+  noSpawn: true
   components:
   - type: SpawnItemsOnUse
     items:
@@ -306,8 +269,7 @@
 - type: entity
   parent: BaseUnoUnknownCard
   id: UnoCardUnknownRedStop
-  name: Неизвестная карта
-  description: Игральная карта UNO
+  noSpawn: true
   components:
   - type: SpawnItemsOnUse
     items:
