--- a/Resources/Prototypes/_White/Entities/Objects/Weapons/Guns/flamethrower.yml
+++ b/Resources/Prototypes/_White/Entities/Objects/Weapons/Guns/flamethrower.yml
@@ -1,8 +1,8 @@
 - type: entity
-  name: огнемёт
   parent: BaseWelder
   id: WeaponFlamethrower
-  description: Отлично подходит для сжигания фурри.
+  name: огнемёт
+  description: Отлично подходит для сжигания био-угроз.
   components:
   - type: Sprite
     sprite: White/Objects/Weapons/flamethrower.rsi
@@ -68,9 +68,9 @@
     node: flamethrower
 
 - type: entity
-  name: часть огнемёта
   parent: BaseItem
   id: WeaponFlamethrowerUnfinished
+  name: часть огнемёта
   description: Недоделанный огнемёт.
   components:
   - type: Sprite
