--- a/Resources/Prototypes/Catalog/Fills/Lockers/security.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/security.yml
@@ -22,6 +22,7 @@
       - id: WeaponLauncherShinano
       - id: BoxShinanoGrenadeFlash
       - id: BoxShinanoGrenadeSmoke
+      - id: BoxShinanoGrenadeStinger
       - id: BoxShinanoGrenadeBeanbag
 
 - type: entity
@@ -46,6 +47,7 @@
       - id: WeaponLauncherShinano
       - id: BoxShinanoGrenadeFlash
       - id: BoxShinanoGrenadeSmoke
+      - id: BoxShinanoGrenadeStinger
       - id: BoxShinanoGrenadeBeanbag
 
 - type: entity
