--- a/Resources/Prototypes/_White/Entities/Objects/Weapons/Guns/Ammunition/shinanogrenades.yml
+++ b/Resources/Prototypes/_White/Entities/Objects/Weapons/Guns/Ammunition/shinanogrenades.yml
@@ -46,6 +46,23 @@
     suffix: false
 
 - type: entity
+  id: ShinanoGrenadeStinger
+  name: shinano stinger grenade
+  parent: BaseShinanoGrenade
+  components:
+  - type: CartridgeAmmo
+    proto: ShinanoBulletGrenadeStinger
+  - type: Sprite
+    sprite: Objects/Weapons/Guns/Ammunition/Explosives/explosives.rsi
+    layers:
+    - state: blast
+      map: ["enum.AmmoVisualLayers.Base"]
+  - type: Appearance
+  - type: SpentAmmoVisuals
+    state: stinger
+    suffix: false
+
+- type: entity
   id: ShinanoGrenadeBeanbag
   name: beanbag shinano grenade
   parent: BaseShinanoGrenade
