--- a/Resources/Prototypes/_White/Entities/Objects/Weapons/Guns/shinano.yml
+++ b/Resources/Prototypes/_White/Entities/Objects/Weapons/Guns/shinano.yml
@@ -11,6 +11,9 @@
         map: ["enum.GunVisualLayers.Base"]
   - type: Item
     sprite: White/Objects/Weapons/Guns/Launchers/shinano-inhands.rsi
+    size: Large
+    shape:
+    - 0,0,2,1
   - type: Clothing
     sprite: White/Objects/Weapons/Guns/Launchers/shinano-inhands.rsi
     slots:
