--- a/Resources/Prototypes/_White/tags.yml
+++ b/Resources/Prototypes/_White/tags.yml
@@ -81,3 +81,12 @@
 
 - type: Tag
   id: DoorjackUsable
+
+- type: Tag
+  id: ShinanoGrenade
+
+- type: Tag
+  id: Card
+
+- type: Tag
+  id: UnoCard
