- fix: No shooting in body bags.

--- a/Resources/Prototypes/Entities/Objects/Specific/Medical/morgue.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Medical/morgue.yml
@@ -86,6 +86,7 @@
       paper_label: !type:ContainerSlot
   - type: StaticPrice
     price: 50
+  - type: ShootBlockerContainer
 
 - type: entity
   id: BodyBagFolded
