--- a/Resources/Prototypes/_White/Wizard/wizard.yml
+++ b/Resources/Prototypes/_White/Wizard/wizard.yml
@@ -28,8 +28,8 @@
   - type: GhostRole
     raffle:
       settings: default
-  - type: GhostRoleMobSpawner
-    prototype: MobHumanSpaceWiz
+  - type: GhostRoleAntagSpawner
+    rule: Wizard
   - type: Sprite
     layers:
     - state: green
