--- a/Resources/Prototypes/Catalog/ReagentDispensers/beverage.yml
+++ b/Resources/Prototypes/Catalog/ReagentDispensers/beverage.yml
@@ -1,57 +1,43 @@
 - type: reagentDispenserInventory
   id: SodaDispenserInventory
   inventory:
-  - CoconutWater
-  - Coffee
-  - Cola
-  - Cream
-  - DrGibb
-  - GreenTea
-  - Ice
-  - JuiceLime
-  - JuiceOrange
-  - LemonLime
-  - RootBeer
-  - SodaWater
-  - SpaceMountainWind
-  - SpaceUp
-  - Sugar
-  - Tea
-  - TonicWater
-  - JuiceWatermelon
+  - DrinkIceJug
+  - DrinkCoffeeJug
+  - DrinkCreamCartonXL
+  - DrinkTeaJug
+  - DrinkGreenTeaJug
+  - DrinkIcedTeaJug
+  - DrinkColaBottleFull
+  - DrinkSpaceMountainWindBottleFull
+  - DrinkDrGibbJug
+  - DrinkRootBeerJug
+  - DrinkSpaceUpBottleFull
+  - DrinkTonicWaterBottleFull
+  - DrinkSodaWaterBottleFull
+  - DrinkLemonLimeJug
+  - DrinkSugarJug
+  - DrinkJuiceOrangeCartonXL
+  - DrinkJuiceLimeCartonXL
+  - DrinkWaterMelonJuiceJug
 
 - type: reagentDispenserInventory
   id: BoozeDispenserInventory
   inventory:
-  - Beer
-  - CoffeeLiqueur
-  - Whiskey
-  - Wine
-  - Vodka
-  - Gin
-  - Rum
-  - Tequila
-  - Vermouth
-  - Cognac
-  - Ale
-  - Mead
-  ###Hacked
-  #- Goldschlager
-  #- Patron
-  #- JuiceWatermelon
-  #- JuiceBerry
-
-
-- type: reagentDispenserInventory
-  id: SodaDispenserEmagInventory
-  inventory:
-    - FourteenLoko
-    - Ephedrine
-    - Histamine
-
-- type: reagentDispenserInventory
-  id: BoozeDispenserEmagInventory
-  inventory:
-    - AtomicBomb
-    - Ethanol
-    - Iron
+  - DrinkLemonLimeJug
+  - DrinkSugarJug
+  - DrinkJuiceOrangeCartonXL
+  - DrinkJuiceLimeCartonXL
+  - DrinkTonicWaterBottleFull
+  - DrinkSodaWaterBottleFull
+  - DrinkBeerGrowler
+  - DrinkCoffeeLiqueurBottleFull
+  - DrinkWhiskeyBottleFull
+  - DrinkWineBottleFull
+  - DrinkVodkaBottleFull
+  - DrinkGinBottleFull
+  - DrinkRumBottleFull
+  - DrinkTequilaBottleFull
+  - DrinkVermouthBottleFull
+  - DrinkCognacBottleFull
+  - DrinkAleBottleFullGrowler
+  - DrinkMeadJug
