--- a/Resources/Prototypes/Entities/Objects/Specific/chemical-containers.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/chemical-containers.yml
@@ -43,46 +43,13 @@
     - type: SolutionContainerVisuals
       maxFillLevels: 6
       fillBaseName: jug
-      inHandsMaxFillLevels: 5
-      inHandsFillBaseName: -fill-
     - type: StaticPrice
       price: 60
-    - type: Damageable
-      damageContainer: Inorganic
-    - type: Destructible
-      thresholds:
-      - trigger:
-          !type:DamageTrigger
-          damage: 200
-        behaviors:
-          - !type:DoActsBehavior
-            acts: [ "Destruction" ]
-      - trigger:
-          !type:DamageTrigger
-          damage: 20
-        behaviors:
-        - !type:PlaySoundBehavior
-          sound:
-            collection: MetalBreak
-            params:
-              volume: -4
-        - !type:SpillBehavior { }
-        - !type:SpawnEntitiesBehavior
-          spawn:
-            SheetPlastic1:
-              min: 0
-              max: 1
-          transferForensics: true
-        - !type:DoActsBehavior
-          acts: [ "Destruction" ]
     - type: Label
       originalName: jug
-    - type: MeleeWeapon
-      soundNoDamage:
-        path: "/Audio/Effects/Fluids/splat.ogg"
-      damage:
-        types:
-          Blunt: 0
+    - type: Tag
+      tags:
+      - ChemDispensable
 
 - type: entity
   parent: Jug
@@ -91,7 +58,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: reagent-name-carbon
+      currentLabel: carbon
     - type: SolutionContainerManager
       solutions:
         beaker:
@@ -106,7 +73,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: reagent-name-iodine
+      currentLabel: iodine
     - type: SolutionContainerManager
       solutions:
         beaker:
@@ -121,7 +88,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: reagent-name-fluorine
+      currentLabel: fluorine
     - type: SolutionContainerManager
       solutions:
         beaker:
@@ -136,7 +103,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: reagent-name-chlorine
+      currentLabel: chlorine
     - type: SolutionContainerManager
       solutions:
         beaker:
@@ -151,7 +118,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: reagent-name-aluminium
+      currentLabel: aluminium
     - type: SolutionContainerManager
       solutions:
         beaker:
@@ -166,7 +133,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: reagent-name-phosphorus
+      currentLabel: phosphorus
     - type: SolutionContainerManager
       solutions:
         beaker:
@@ -181,7 +148,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: reagent-name-sulfur
+      currentLabel: sulfur
     - type: SolutionContainerManager
       solutions:
         beaker:
@@ -196,7 +163,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: reagent-name-silicon
+      currentLabel: silicon
     - type: SolutionContainerManager
       solutions:
         beaker:
@@ -211,7 +178,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: reagent-name-hydrogen
+      currentLabel: hydrogen
     - type: SolutionContainerManager
       solutions:
         beaker:
@@ -226,7 +193,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: reagent-name-lithium
+      currentLabel: lithium
     - type: SolutionContainerManager
       solutions:
         beaker:
@@ -241,7 +208,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: reagent-name-sodium
+      currentLabel: sodium
     - type: SolutionContainerManager
       solutions:
         beaker:
@@ -256,7 +223,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: reagent-name-potassium
+      currentLabel: potassium
     - type: SolutionContainerManager
       solutions:
         beaker:
@@ -271,7 +238,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: reagent-name-radium
+      currentLabel: radium
     - type: SolutionContainerManager
       solutions:
         beaker:
@@ -286,7 +253,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: reagent-name-iron
+      currentLabel: iron
     - type: SolutionContainerManager
       solutions:
         beaker:
@@ -301,7 +268,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: reagent-name-copper
+      currentLabel: copper
     - type: SolutionContainerManager
       solutions:
         beaker:
@@ -316,7 +283,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: reagent-name-gold
+      currentLabel: gold
     - type: SolutionContainerManager
       solutions:
         beaker:
@@ -331,7 +298,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: reagent-name-mercury
+      currentLabel: mercury
     - type: SolutionContainerManager
       solutions:
         beaker:
@@ -346,7 +313,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: reagent-name-silver
+      currentLabel: silver
     - type: SolutionContainerManager
       solutions:
         beaker:
@@ -361,7 +328,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: reagent-name-ethanol
+      currentLabel: ethanol
     - type: SolutionContainerManager
       solutions:
         beaker:
@@ -376,7 +343,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: reagent-name-sugar
+      currentLabel: sugar
     - type: SolutionContainerManager
       solutions:
         beaker:
@@ -391,7 +358,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: reagent-name-nitrogen
+      currentLabel: nitrogen
     - type: SolutionContainerManager
       solutions:
         beaker:
@@ -406,7 +373,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: reagent-name-oxygen
+      currentLabel: oxygen
     - type: SolutionContainerManager
       solutions:
         beaker:
@@ -421,7 +388,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: reagent-name-plant-b-gone
+      currentLabel: Plant-B-Gone
     - type: SolutionContainerManager
       solutions:
         beaker:
@@ -436,7 +403,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: reagent-name-welding-fuel
+      currentLabel: welding fuel
     - type: SolutionContainerManager
       solutions:
         beaker:
