--- a/Resources/Prototypes/Entities/Structures/Dispensers/base_structuredispensers.yml
+++ b/Resources/Prototypes/Entities/Structures/Dispensers/base_structuredispensers.yml
@@ -55,18 +55,20 @@
         sound:
           collection: MetalGlassBreak
   - type: ReagentDispenser
+    storageWhitelist:
+      tags:
+      - Bottle
+    beakerSlot:
+      whitelistFailPopup: reagent-dispenser-component-cannot-put-entity-message
+      whitelist:
+        components:
+        - FitsInDispenser
   - type: ItemSlots
-    slots:
-      beakerSlot:
-        whitelistFailPopup: reagent-dispenser-component-cannot-put-entity-message
-        whitelist:
-          components:
-          - FitsInDispenser
   - type: ContainerContainer
     containers:
       machine_board: !type:Container
       machine_parts: !type:Container
-      beakerSlot: !type:ContainerSlot
+      ReagentDispenser-beakerSlot: !type:ContainerSlot
   - type: StaticPrice
     price: 1000
   - type: WiresPanel
