--- a/Resources/Prototypes/Entities/Structures/Dispensers/chem.yml
+++ b/Resources/Prototypes/Entities/Structures/Dispensers/chem.yml
@@ -1,16 +1,19 @@
 - type: entity
   id: ChemDispenser
   name: chemical dispenser
+  suffix: Filled
   parent: ReagentDispenserBase
-  description: An industrial grade chemical dispenser with a sizeable chemical supply.
+  description: An industrial grade chemical dispenser.
   components:
   - type: Sprite
     sprite: Structures/dispensers.rsi
     state: industrial-working
     snapCardinals: true
   - type: ReagentDispenser
+    storageWhitelist:
+      tags:
+      - ChemDispensable
     pack: ChemDispenserStandardInventory
-    emagPack: ChemDispenserEmaggedInventory
   - type: ApcPowerReceiver
   - type: ExtensionCableReceiver
   - type: Destructible
@@ -28,12 +31,21 @@
         acts: ["Destruction"]
   - type: Machine
     board: ChemDispenserMachineCircuitboard
+  - type: Wires
+    boardName: wires-board-name-chemdispenser
+    layoutId: ChemDispenser
   - type: GuideHelp
     guides:
     - Chemicals
     - Chemist
   - type: StealTarget
     stealGroup: ChemDispenser
-  - type: DeviceNetwork
-    deviceNetId: Wired
-    receiveFrequencyId: BasicDevice
+
+- type: entity
+  id: ChemDispenserEmpty
+  name: chemical dispenser
+  suffix: Empty
+  parent: ChemDispenser
+  components:
+  - type: ReagentDispenser
+    pack: EmptyInventory
