--- a/Resources/Prototypes/Research/arsenal.yml
+++ b/Resources/Prototypes/Research/arsenal.yml
@@ -65,6 +65,9 @@
   - MagazineBoxMagnumRubber
   - MagazineBoxLightRifleRubber
   - MagazineBoxRifleRubber
+  - ShinanoGrenadeFlashRecipe
+  - ShinanoGrenadeSmokeRecipe
+  - ShinanoGrenadeStingerRecipe
 
 - type: technology
   id: UraniumMunitions
