--- a/Resources/Prototypes/_White/Entities/Objects/Weapons/Guns/shinano.yml
+++ b/Resources/Prototypes/_White/Entities/Objects/Weapons/Guns/shinano.yml
@@ -38,3 +38,18 @@
     soundInsert:
       path: /Audio/Weapons/Guns/MagIn/batrifle_magin.ogg
     autoCycle: false
+  - type: WeaponModules
+  - type: ItemSlots
+    slots:
+      shutter_module:
+        name: Shutter Module
+        insertSound: /Audio/White/Gun/Modules/insertmodule.ogg
+        ejectSound: /Audio/White/Gun/Modules/ejectmodule.ogg
+        priority: 1
+        whitelist:
+          tags:
+          - BaseShutterModule
+  - type: ContainerContainer
+    containers:
+      shutter_module: !type:ContainerSlot
+  - type: Appearance
