--- a/Resources/Prototypes/_White/Entities/Structures/Doors/Airlocks/Glass/glass_airlock_3x1.yml
+++ b/Resources/Prototypes/_White/Entities/Structures/Doors/Airlocks/Glass/glass_airlock_3x1.yml
@@ -1,6 +1,6 @@
 - type: entity
   parent: Airlock
-  id: DoubleGlassAirlock
+  id: ThreepleGlassAirlock
   components:
   - type: MeleeSound
     soundGroups:
@@ -10,17 +10,16 @@
     occludes: false
   - type: Occluder
     enabled: false
-  - type: Sprite
-    sprite: White/Structures/Doors/Airlocks/Glass/Wide/glass_2x1.rsi
+  - type: Sprite # TODO: NORMAL 3x1 AIRLOCK SPRITE
+    sprite: White/Structures/Doors/Airlocks/Glass/Wide/glass_3x1.rsi
     snapCardinals: false
-    offset: 0.5,0
   - type: AnimationPlayer
   - type: Fixtures
     fixtures:
       fix1:
         shape:
           !type:PhysShapeAabb
-          bounds: "-0.49,-0.49,1.49,0.49"
+          bounds: "-1.5,-0.49,1.5,0.49" # 3x1
         density: 100
         mask:
         - FullTileMask
