--- a/Resources/Prototypes/Entities/Objects/Materials/parts.yml
+++ b/Resources/Prototypes/Entities/Objects/Materials/parts.yml
@@ -74,6 +74,9 @@
           Quantity: 4.5
         - ReagentId: Carbon
           Quantity: 0.5
+  - type: RCDAmmo # WD
+    canBeExamined: false
+    chargeCountModifier: 0.5
 
 - type: entity
   parent: PartRodMetal
