--- a/Resources/Prototypes/Entities/Objects/Tools/cable_coils.yml
+++ b/Resources/Prototypes/Entities/Objects/Tools/cable_coils.yml
@@ -27,6 +27,9 @@
     price: 0
   - type: StackPrice
     price: 1
+  - type: RCDAmmo # WD
+    canBeExamined: false
+    chargeCountModifier: 0.2
 
 - type: entity
   id: CableHVStack
