better timings and costs + building apc and camera

--- a/Resources/Prototypes/Entities/Objects/Tools/tools.yml
+++ b/Resources/Prototypes/Entities/Objects/Tools/tools.yml
@@ -420,6 +420,8 @@
     - MVCable
     - HVCable
     - CableTerminal
+    - APC # WD
+    - Camera # WD
     - Deconstruct
   - type: LimitedCharges
     maxCharges: 30
