--- a/Resources/Prototypes/Entities/Objects/Tools/tools.yml
+++ b/Resources/Prototypes/Entities/Objects/Tools/tools.yml
@@ -395,34 +395,11 @@
       path: "/Audio/Items/drill_hit.ogg"
 
 - type: entity
-  id: RCD
+  id: BaseRCD
   parent: BaseItem
   name: RCD
   description: The rapid construction device can be used to quickly place and remove various station structures and fixtures. Requires compressed matter to function.
   components:
-  - type: RCD
-    availablePrototypes:
-    - WallSolid
-    - FloorSteel
-    - Plating
-    - Catwalk
-    - Grille
-    - Window
-    - WindowDirectional
-    - WindowReinforcedDirectional
-    - ReinforcedWindow
-    - Airlock
-    - AirlockGlass
-    - Firelock
-    - TubeLight
-    - BulbLight
-    - LVCable
-    - MVCable
-    - HVCable
-    - CableTerminal
-    - APC # WD
-    - Camera # WD
-    - Deconstruct
   - type: LimitedCharges
     maxCharges: 30
     charges: 30
@@ -451,13 +428,18 @@
     key: enum.RcdUiKey.Key
 
 - type: entity
-  id: RCDEmpty
-  parent: RCD
-  suffix: Empty
+  id: RCD
+  parent: BaseRCD
+  name: RCD
+  description: The rapid construction device can be used to quickly place and remove various station structures and fixtures. Requires compressed matter to function.
   components:
-  - type: LimitedCharges
-    charges: 0
   - type: RCD
+    categoryPrototypes: # WD
+    - WallsAndFlooring # WD
+    - WindowsAndGrilles # WD
+    - Airlocks # WD
+    - Electrical # WD
+    - Lighting # WD
     availablePrototypes:
     - WallSolid
     - FloorSteel
@@ -471,6 +453,55 @@
     - Airlock
     - AirlockGlass
     - Firelock
+    - TubeLight
+    - BulbLight
+    - LVCable
+    - MVCable
+    - HVCable
+    - CableTerminal
+    - APC # WD
+    - Camera # WD
+    - Deconstruct
+
+- type: entity
+  id: RCDEmpty
+  parent: RCD
+  suffix: Empty
+  components:
+  - type: LimitedCharges
+    charges: 0
+  - type: RCD
+    categoryPrototypes: # WD
+    - WallsAndFlooring # WD
+    - WindowsAndGrilles # WD
+    - Airlocks # WD
+    - Electrical # WD
+    - Lighting # WD
+    availablePrototypes:
+    - WallSolid
+    - FloorSteel
+    - Plating
+    - Catwalk
+    - Grille
+    - Window
+    - WindowDirectional
+    - WindowReinforcedDirectional
+    - ReinforcedWindow
+    - Airlock
+    - AirlockGlass
+    - Firelock
+
+- type: entity # WD
+  id: RapidPipeDispenser
+  parent: BaseRCD
+  components:
+  - type: RCD
+    categoryPrototypes:
+    - Pipes
+    - GasDevices
+    - Disposal
+    availablePrototypes:
+    - PipeStraight
 
 - type: entity
   id: RCDRecharging
