--- a/Resources/Prototypes/InventoryTemplates/mannequin_inventory_template.yml
+++ b/Resources/Prototypes/InventoryTemplates/mannequin_inventory_template.yml
@@ -62,3 +62,23 @@
       uiWindowPos: 3,0
       strippingWindowPos: 0,2
       displayName: Back
+    - name: underwearb #WD slot
+      slotTexture: underwearb
+      slotFlags: UNDERWEARB
+      stripTime: 6
+      uiWindowPos: 3,0
+      strippingWindowPos: 2,1
+      displayName: Panties
+      whitelist:
+        tags:
+        - underwearb
+    - name: underweart #WD slot
+      slotTexture: underweart
+      slotFlags: UNDERWEART
+      stripTime: 6
+      uiWindowPos: 3,1
+      strippingWindowPos: 2,0
+      displayName: Bra
+      whitelist:
+        tags:
+        - underweart
