--- a/Resources/Prototypes/_White/Entities/Cult/Weapons/blood_spear.yml
+++ b/Resources/Prototypes/_White/Entities/Cult/Weapons/blood_spear.yml
@@ -19,7 +19,7 @@
             - 0.30,0.40
         density: 20
         mask:
-        - ItemMask
+        - BulletImpassable
         restitution: 0.3
         friction: 0.2
   - type: Sharp
